Kensington Expert Mouse is not detected as a trackball
meta_input_device_is_trackball()
uses the device name to determine whether it's a trackball, and currently it just searches for the substring trackball
in the name. Certain trackballs, such as the Kensington Expert Mouse, do not include the word "trackball" in the device name.
This seems like a kludge (doesn't libinput expose this in a more sensible manner?) but as a quick fix, the attached patch will detect a Kensington Expert Mouse as a trackball (and thus respect the scroll-wheel-emulation-button
setting).